--- a/static/index.html
+++ b/static/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <title>A static page</title>
   <link rel="stylesheet" href="/stylesheets/main.css">
-  <script src="http://localhost:8080/index.js"></script>
-  <script src="http://localhost:8080/sw.js"></script>
+  <script src="index.js"></script>
+  <script src="sw.js"></script>
 </head>
 <body>
   <h1>Hello from a static page</h1>
